--- a/style.css
+++ b/style.css
@@ -83,6 +83,22 @@ canvas {
 .nav-list {
   padding: 2em;
   color: greenyellow;
+  list-style-type: none;
+}
+
+li {
+  position: relative;
+  line-height: 1.5em;
+  cursor: pointer;
+  transition-duration: .3s;
+  width: fit-content;
+}
+
+li:hover {
+  text-decoration: underline;
+  background: blue;
+  color:white;
+  width: 100%;
 }
 
 .ticker-container {
