--- a/style.css
+++ b/style.css
@@ -21,13 +21,22 @@ header {
   top: 0;
   z-index: 5;
   background-color: rgb(235, 234, 240);
+  display: flex;
+  justify-content: space-between;
+  padding-inline-start: .5em;
+  padding-inline-end: 1em;
+  background-color: black;
 }
 
 h1 {
   margin: 0;
   color: chartreuse;
   padding: .1em 0;
-  padding-inline-start: .5em;
+}
+
+.back-to-top {
+  font-size: 2em;
+  color: chartreuse;
   background-color: black;
 }
 
