--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   --bg-secondary: black;
 
   /*elements*/
-  --elements-primary: chartreuse;
+  --elements-primary: rgb(85, 204, 71);
 
   /*text*/
   --text-primary: black;
